# pipeline-and-rag-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  reset_state.py
api/: app.py
config/: settings.py  specialties.py
data/raw/: services.xlsx
pipeline/: orchestrator.py  state_manager.py  writer.py
pipeline/chunker/: context_injector.py  splitter.py
pipeline/parser/: html_cleaner.py  image_ocr.py  markdown_converter.py  metadata_extractor.py  services_parser.py
pipeline/scraper/: browser.py  listing_scraper.py  protocol_scraper.py
pipeline/utils/: rate_limiter.py  retry.py
rag/: chat.py  embeddings.py  indexer.py  indexer_services.py  prompts.py  retriever.py
tests/fixtures/: sample_protocol.html
tests/pipeline/: test_markdown_converter.py  test_metadata_extractor.py  test_splitter.py
tests/rag/: test_retriever.py
